--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
       "tests/TestCase.php"
     ],
     "psr-4": {
-      "App\\": "app/"
+      "Dayssince\\": "app/"
     }
   },
   "scripts": {
